@@ -1,5 +1,5 @@
 #
-# $Id: winTheme.tcl,v 1.9 2008/11/29 00:43:48 patthoyts Exp $
+# $Id: winTheme.tcl,v 1.10 2010/09/02 17:47:06 jenglish Exp $
 #
 # Settings for 'winnative' theme.
 #
@@ -41,7 +41,13 @@ namespace eval ttk::theme::winnative {
 	ttk::style map TCombobox \
 	    -selectbackground [list !focus SystemWindow] \
 	    -selectforeground [list !focus SystemWindowText] \
-	    -foreground	[list {readonly focus} SystemHighlightText] \
+	    -fieldbackground [list \
+	    	readonly SystemButtonFace \
+		disabled SystemButtonFace] \
+	    -foreground	[list \
+		disabled		SystemGrayText \
+	    	{readonly focus}	SystemHighlightText \
+	    ] \
 	    -focusfill	[list {readonly focus} SystemHighlight] \
 	    ;
 
